debug_utils/ing_test.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - echo.sharecro.ws
    secretName: test-tls-secret


  # rules:
  #   - host: foo.bar.com
  #     http: 
  #       paths:
  #         - backend:
  #             serviceName: http-svc
  #             servicePort: 80
  #           path: /foo
  #   - host: foo.baz.com
  #     http:
  #       paths:
  #         - backend:
  #             serviceName: http-svc
  #             servicePort: 80
  #           path: /baz

  backend:
    # This assumes http-svc exists and routes to healthy endpoints.
    serviceName: http-svc
    servicePort: 80
